# sae-probes

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
raw_data/: probing_datasets_MASTER.csv
raw_data/cleaned_data/: 101_disease_class.csv  102_twt_emotion.csv  103_it_tick.csv  106_hate_hate.csv  107_hate_offensive.csv  108_athlete_sport.csv  109_ball_ws.csv  112_amzn_rev.csv  113_movie_sent.csv  116_nyc_borough_Bronx.csv  118_us_state_CA.csv  119_us_state_TX.csv  120_us_timezone_Chicago.csv  127_art_type_song.csv  128_art_type_movie.csv  129_arith_mc_A.csv  132_temp_cat_Event Ordering.csv  133_context_type_Causality.csv  136_glue_mnli_entailment.csv  138_glue_mnli_contradiction.csv  13_us_state.csv  140_news_class_Technology.csv  141_news_class_Entertainment.csv  145_disease_class_digestive system diseases.csv  146_disease_class_cardiovascular diseases.csv  151_it_tick_HR Support.csv  152_it_tick_Hardware.csv  153_it_tick_Administrative rights.csv  156_athlete_sport_baseball.csv  16_us_density.csv  18_world_latitude.csv  25_headline_year.csv  27_art_type.csv  28_art_year.csv  30_book_length.csv  46_context_type.csv  47_reasoning_tf.csv  50_deon_isvalid.csv  51_just_is.csv  52_virtue_is.csv  (+19 more)
sae_probes/: __init__.py  constants.py  generate_model_activations.py  generate_sae_activations.py  run_baselines.py  run_sae_evals.py  utils_data.py  utils_hooks.py  utils_tmp.py  utils_training.py
scripts/: process_raw_data.py  test_compression.py
tests/: conftest.py  helpers.py  test_generate_model_activations.py  test_generate_sae_activations.py  test_run_baselines.py  test_run_sae_evals.py  test_utils_data.py
(+237 files in other folders)
